(frontend) fixed stepper overflow issue

--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -2,3 +2,8 @@
 thead {
     font-weight: bold;
 }
+
+.bs-stepper-header {
+    overflow-x: auto;
+    margin-bottom: 3rem;
+}
